updating release branch with executed code

--- a/Introduction_to_python_session_1.ipynb
+++ b/Introduction_to_python_session_1.ipynb
@@ -1257,7 +1257,17 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "[1, 4, 9, 16]\n",
+        "('G', 'C', 'A', 'T')\n"
+       ]
+      }
+     ],
+     "prompt_number": 39
     },
     {
      "cell_type": "markdown",
@@ -1279,7 +1289,8 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [],
+     "prompt_number": 40
     },
     {
      "cell_type": "markdown",
@@ -1300,7 +1311,18 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "123\n",
+        "92\n",
+        "33\n"
+       ]
+      }
+     ],
+     "prompt_number": 41
     },
     {
      "cell_type": "markdown",
@@ -1321,7 +1343,18 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "(54, 92)\n",
+        "[92, 87, 33]\n",
+        "[123, 54, 92, 87]\n"
+       ]
+      }
+     ],
+     "prompt_number": 42
     },
     {
      "cell_type": "markdown",
@@ -1340,7 +1373,18 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "True\n",
+        "False\n",
+        "True\n"
+       ]
+      }
+     ],
+     "prompt_number": 43
     },
     {
      "cell_type": "markdown",
@@ -1358,7 +1402,17 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "length of t: 5\n",
+        "number of 33s in x: 1\n"
+       ]
+      }
+     ],
+     "prompt_number": 44
     },
     {
      "cell_type": "markdown",
@@ -1377,7 +1431,17 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "[123, 54, 92, 87, 33]\n",
+        "[123, 54, 33, 87, 33]\n"
+       ]
+      }
+     ],
+     "prompt_number": 45
     },
     {
      "cell_type": "markdown",
@@ -1394,7 +1458,19 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": []
+     "outputs": [
+      {
+       "ename": "TypeError",
+       "evalue": "'tuple' object does not support item assignment",
+       "output_type": "pyerr",
+       "traceback": [
+        "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+        "\u001b[0;32m<ipython-input-46-9919c86c94e4>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mt\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m33\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+        "\u001b[0;31mTypeError\u001b[0m: 'tuple' object does not support item assignment"
+       ]
+      }
+     ],
+     "prompt_number": 46
     },
     {
      "cell_type": "markdown",
@@ -1414,17 +1490,14 @@
      "metadata": {},
      "outputs": [
       {
-       "ename": "AttributeError",
-       "evalue": "'int' object has no attribute 'append'",
-       "output_type": "pyerr",
-       "traceback": [
-        "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-        "\u001b[0;32m<ipython-input-39-ebd4e4ff9b24>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mappend\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m101\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;32mprint\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-        "\u001b[0;31mAttributeError\u001b[0m: 'int' object has no attribute 'append'"
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "[123, 54, 33, 87, 33, 101]\n"
        ]
       }
      ],
-     "prompt_number": 39
+     "prompt_number": 47
     },
     {
      "cell_type": "markdown",
@@ -1444,17 +1517,14 @@
      "metadata": {},
      "outputs": [
       {
-       "ename": "AttributeError",
-       "evalue": "'int' object has no attribute 'insert'",
-       "output_type": "pyerr",
-       "traceback": [
-        "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-        "\u001b[0;32m<ipython-input-40-5f8efd686825>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0minsert\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;36m1111\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;32mprint\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-        "\u001b[0;31mAttributeError\u001b[0m: 'int' object has no attribute 'insert'"
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "[123, 54, 33, 1111, 87, 33, 101]\n"
        ]
       }
      ],
-     "prompt_number": 40
+     "prompt_number": 48
     },
     {
      "cell_type": "markdown",
@@ -1474,17 +1544,14 @@
      "metadata": {},
      "outputs": [
       {
-       "ename": "AttributeError",
-       "evalue": "'int' object has no attribute 'remove'",
-       "output_type": "pyerr",
-       "traceback": [
-        "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-        "\u001b[0;32m<ipython-input-41-4c25f8e46126>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mremove\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m123\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;32mprint\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-        "\u001b[0;31mAttributeError\u001b[0m: 'int' object has no attribute 'remove'"
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "[54, 33, 1111, 87, 33, 101]\n"
        ]
       }
      ],
-     "prompt_number": 41
+     "prompt_number": 49
     },
     {
      "cell_type": "markdown",
@@ -1505,24 +1572,15 @@
      "metadata": {},
      "outputs": [
       {
-       "ename": "TypeError",
-       "evalue": "'int' object does not support item deletion",
-       "output_type": "pyerr",
-       "traceback": [
-        "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-        "\u001b[0;32m<ipython-input-42-17bb5173a58b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mprint\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0;32mdel\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;32mprint\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-        "\u001b[0;31mTypeError\u001b[0m: 'int' object does not support item deletion"
-       ]
-      },
-      {
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "2\n"
+        "[54, 33, 1111, 87, 33, 101]\n",
+        "[33, 1111, 87, 33, 101]\n"
        ]
       }
      ],
-     "prompt_number": 42
+     "prompt_number": 50
     },
     {
      "cell_type": "markdown",
@@ -1543,24 +1601,15 @@
      "metadata": {},
      "outputs": [
       {
-       "ename": "AttributeError",
-       "evalue": "'int' object has no attribute 'pop'",
-       "output_type": "pyerr",
-       "traceback": [
-        "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[0;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-        "\u001b[0;32m<ipython-input-43-2c281800e342>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mprint\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m \u001b[0my\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpop\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;32mprint\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mx\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-        "\u001b[0;31mAttributeError\u001b[0m: 'int' object has no attribute 'pop'"
-       ]
-      },
-      {
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "2\n"
+        "[33, 1111, 87, 33, 101]\n",
+        "101 [33, 1111, 87, 33]\n"
        ]
       }
      ],
-     "prompt_number": 43
+     "prompt_number": 51
     },
     {
      "cell_type": "markdown",
@@ -1589,7 +1638,7 @@
        ]
       }
      ],
-     "prompt_number": 44
+     "prompt_number": 52
     },
     {
      "cell_type": "markdown",
@@ -1618,7 +1667,7 @@
        ]
       }
      ],
-     "prompt_number": 45
+     "prompt_number": 53
     },
     {
      "cell_type": "markdown",
@@ -1645,7 +1694,7 @@
        ]
       }
      ],
-     "prompt_number": 46
+     "prompt_number": 54
     },
     {
      "cell_type": "markdown",
@@ -1676,7 +1725,7 @@
        ]
       }
      ],
-     "prompt_number": 47
+     "prompt_number": 55
     },
     {
      "cell_type": "markdown",
@@ -1706,7 +1755,7 @@
        ]
       }
      ],
-     "prompt_number": 48
+     "prompt_number": 56
     },
     {
      "cell_type": "markdown",
@@ -1734,7 +1783,7 @@
        ]
       }
      ],
-     "prompt_number": 49
+     "prompt_number": 57
     },
     {
      "cell_type": "markdown",
@@ -1787,7 +1836,7 @@
        ]
       }
      ],
-     "prompt_number": 50
+     "prompt_number": 58
     },
     {
      "cell_type": "markdown",
@@ -1811,12 +1860,12 @@
        "output_type": "pyerr",
        "traceback": [
         "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-        "\u001b[0;32m<ipython-input-51-d794635236a5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtext\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"CCC\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+        "\u001b[0;32m<ipython-input-59-d794635236a5>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mtext\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"CCC\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
         "\u001b[0;31mTypeError\u001b[0m: 'str' object does not support item assignment"
        ]
       }
      ],
-     "prompt_number": 51
+     "prompt_number": 59
     },
     {
      "cell_type": "markdown",
@@ -1853,7 +1902,7 @@
        ]
       }
      ],
-     "prompt_number": 52
+     "prompt_number": 60
     },
     {
      "cell_type": "markdown",
@@ -1889,7 +1938,7 @@
        ]
       }
      ],
-     "prompt_number": 53
+     "prompt_number": 61
     },
     {
      "cell_type": "markdown",
@@ -1922,7 +1971,7 @@
        ]
       }
      ],
-     "prompt_number": 54
+     "prompt_number": 62
     },
     {
      "cell_type": "markdown",
@@ -1948,7 +1997,7 @@
        ]
       }
      ],
-     "prompt_number": 55
+     "prompt_number": 63
     },
     {
      "cell_type": "markdown",
@@ -1976,12 +2025,12 @@
        "output_type": "pyerr",
        "traceback": [
         "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-        "\u001b[0;32m<ipython-input-56-b44ba1d0ce4d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0ms\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"chr\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mchroms\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0;32mprint\u001b[0m \u001b[0ms\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mchroms\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+        "\u001b[0;32m<ipython-input-64-b44ba1d0ce4d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0ms\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m\"chr\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mchroms\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0;32mprint\u001b[0m \u001b[0ms\u001b[0m \u001b[0;34m+\u001b[0m \u001b[0mchroms\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
         "\u001b[0;31mTypeError\u001b[0m: cannot concatenate 'str' and 'int' objects"
        ]
       }
      ],
-     "prompt_number": 56
+     "prompt_number": 64
     },
     {
      "cell_type": "markdown",
@@ -2029,7 +2078,7 @@
        ]
       }
      ],
-     "prompt_number": 57
+     "prompt_number": 65
     },
     {
      "cell_type": "markdown",
@@ -2056,7 +2105,7 @@
        ]
       }
      ],
-     "prompt_number": 58
+     "prompt_number": 66
     },
     {
      "cell_type": "markdown",
@@ -2102,7 +2151,7 @@
        ]
       }
      ],
-     "prompt_number": 59
+     "prompt_number": 67
     },
     {
      "cell_type": "markdown",
@@ -2134,7 +2183,7 @@
        ]
       }
      ],
-     "prompt_number": 60
+     "prompt_number": 68
     },
     {
      "cell_type": "markdown",
@@ -2164,7 +2213,7 @@
        ]
       }
      ],
-     "prompt_number": 61
+     "prompt_number": 69
     },
     {
      "cell_type": "markdown",
@@ -2195,7 +2244,7 @@
        ]
       }
      ],
-     "prompt_number": 62
+     "prompt_number": 70
     },
     {
      "cell_type": "markdown",
@@ -2243,7 +2292,7 @@
        ]
       }
      ],
-     "prompt_number": 63
+     "prompt_number": 71
     },
     {
      "cell_type": "markdown",
@@ -2271,7 +2320,7 @@
        ]
       }
      ],
-     "prompt_number": 64
+     "prompt_number": 72
     },
     {
      "cell_type": "markdown",
@@ -2295,7 +2344,7 @@
        "output_type": "pyerr",
        "traceback": [
         "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-        "\u001b[0;32m<ipython-input-65-4f0ea8d0dd39>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mprint\u001b[0m \u001b[0;34m\"What about N?\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdna\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"N\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+        "\u001b[0;32m<ipython-input-73-4f0ea8d0dd39>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mprint\u001b[0m \u001b[0;34m\"What about N?\"\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdna\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m\"N\"\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
         "\u001b[0;31mKeyError\u001b[0m: 'N'"
        ]
       },
@@ -2307,7 +2356,7 @@
        ]
       }
      ],
-     "prompt_number": 65
+     "prompt_number": 73
     },
     {
      "cell_type": "markdown",
@@ -2335,7 +2384,7 @@
        ]
       }
      ],
-     "prompt_number": 66
+     "prompt_number": 74
     },
     {
      "cell_type": "markdown",
@@ -2355,13 +2404,13 @@
      "outputs": [
       {
        "output_type": "pyout",
-       "prompt_number": 67,
+       "prompt_number": 75,
        "text": [
         "True"
        ]
       }
      ],
-     "prompt_number": 67
+     "prompt_number": 75
     },
     {
      "cell_type": "code",
@@ -2374,13 +2423,13 @@
      "outputs": [
       {
        "output_type": "pyout",
-       "prompt_number": 68,
+       "prompt_number": 76,
        "text": [
         "True"
        ]
       }
      ],
-     "prompt_number": 68
+     "prompt_number": 76
     },
     {
      "cell_type": "markdown",
@@ -2406,7 +2455,7 @@
        ]
       }
      ],
-     "prompt_number": 69
+     "prompt_number": 77
     },
     {
      "cell_type": "markdown",
@@ -2433,7 +2482,7 @@
        ]
       }
      ],
-     "prompt_number": 70
+     "prompt_number": 78
     },
     {
      "cell_type": "markdown",
@@ -2460,7 +2509,7 @@
        ]
       }
      ],
-     "prompt_number": 71
+     "prompt_number": 79
     },
     {
      "cell_type": "markdown",
@@ -2487,7 +2536,7 @@
        ]
       }
      ],
-     "prompt_number": 72
+     "prompt_number": 80
     },
     {
      "cell_type": "markdown",
@@ -2514,7 +2563,7 @@
        ]
       }
      ],
-     "prompt_number": 73
+     "prompt_number": 81
     },
     {
      "cell_type": "markdown",
@@ -2541,7 +2590,7 @@
        ]
       }
      ],
-     "prompt_number": 74
+     "prompt_number": 82
     },
     {
      "cell_type": "markdown",
@@ -2568,7 +2617,7 @@
        ]
       }
      ],
-     "prompt_number": 75
+     "prompt_number": 83
     },
     {
      "cell_type": "markdown",
