--- a/Introduction_to_python_session_2.ipynb
+++ b/Introduction_to_python_session_2.ipynb
@@ -113,7 +113,7 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "Value is positive\n"
+        "Value is negative\n"
        ]
       }
      ],
@@ -184,7 +184,7 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "BRCA2 is upregulated\n"
+        "BRCA2 is downregulated\n"
        ]
       }
      ],
@@ -213,7 +213,7 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "Yes\n"
+        "No\n"
        ]
       }
      ],
@@ -306,10 +306,12 @@
      "metadata": {},
      "outputs": [
       {
-       "output_type": "pyout",
-       "prompt_number": 5,
+       "output_type": "stream",
+       "stream": "stdout",
        "text": [
-        "False"
+        "False\n",
+        "True\n",
+        "True\n"
        ]
       }
      ],
@@ -538,6 +540,11 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
+        "1\n",
+        "3\n",
+        "7\n",
+        "15\n",
+        "31\n",
         "31\n"
        ]
       }
@@ -624,7 +631,12 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "32.0\n"
+        "0.5\n",
+        "1.0\n",
+        "2.0\n",
+        "4.0\n",
+        "8.0\n",
+        "final value: 8.0\n"
        ]
       }
      ],
@@ -762,7 +774,8 @@
         "1\n",
         "2\n",
         "4\n",
-        "5\n"
+        "5\n",
+        "[1, 2, 4, 5]\n"
        ]
       }
      ],
@@ -786,7 +799,7 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "[1, 3, 4, 5]\n"
+        "[1, 4, 5]\n"
        ]
       }
      ],
@@ -867,19 +880,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "[0, 1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
-        "[5, 6, 7, 8, 9]\n",
-        "[0, 3, 6, 9]\n",
-        "[7, 5, 3]\n"
-       ]
-      }
-     ],
-     "prompt_number": 18
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -898,23 +899,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "0\n",
-        "1\n",
-        "4\n",
-        "9\n",
-        "16\n",
-        "25\n",
-        "36\n",
-        "49\n"
-       ]
-      }
-     ],
-     "prompt_number": 19
+     "outputs": []
     },
     {
      "cell_type": "code",
@@ -929,16 +914,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "[0, 1, 4, 9, 16, 25, 36, 49]\n"
-       ]
-      }
-     ],
-     "prompt_number": 20
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -957,16 +933,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "[1, 4, 9, 16, 25, 36, 49]\n"
-       ]
-      }
-     ],
-     "prompt_number": 21
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -986,20 +953,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "0 NA06984\n",
-        "1 NA06985\n",
-        "2 NA06986\n",
-        "3 NA06989\n",
-        "4 NA06991\n"
-       ]
-      }
-     ],
-     "prompt_number": 22
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -1019,20 +973,7 @@
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "0 NA06984 NA06993\n",
-        "1 NA06985 NA06994\n",
-        "2 NA06986 NA06995\n",
-        "3 NA06989 NA06997\n",
-        "4 NA06991 NA07000\n"
-       ]
-      }
-     ],
-     "prompt_number": 23
+     "outputs": []
     },
     {
      "cell_type": "heading",
@@ -1072,7 +1013,7 @@
        ]
       }
      ],
-     "prompt_number": 24
+     "prompt_number": 18
     },
     {
      "cell_type": "code",
@@ -1093,7 +1034,7 @@
        ]
       }
      ],
-     "prompt_number": 25
+     "prompt_number": 19
     },
     {
      "cell_type": "heading",
@@ -1137,7 +1078,7 @@
        ]
       }
      ],
-     "prompt_number": 26
+     "prompt_number": 20
     },
     {
      "cell_type": "markdown",
@@ -1175,7 +1116,7 @@
        ]
       }
      ],
-     "prompt_number": 27
+     "prompt_number": 21
     },
     {
      "cell_type": "markdown",
@@ -1202,7 +1143,7 @@
        ]
       }
      ],
-     "prompt_number": 28
+     "prompt_number": 22
     },
     {
      "cell_type": "code",
@@ -1224,7 +1165,7 @@
        ]
       }
      ],
-     "prompt_number": 29
+     "prompt_number": 23
     },
     {
      "cell_type": "code",
@@ -1247,7 +1188,7 @@
        ]
       }
      ],
-     "prompt_number": 30
+     "prompt_number": 24
     },
     {
      "cell_type": "markdown",
@@ -1291,12 +1232,12 @@
        "output_type": "pyerr",
        "traceback": [
         "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[0;31mZeroDivisionError\u001b[0m                         Traceback (most recent call last)",
-        "\u001b[0;32m<ipython-input-31-9a769fda9620>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mx\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+        "\u001b[0;32m<ipython-input-25-9a769fda9620>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mx\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m1\u001b[0m\u001b[0;34m/\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
         "\u001b[0;31mZeroDivisionError\u001b[0m: integer division or modulo by zero"
        ]
       }
      ],
-     "prompt_number": 31
+     "prompt_number": 25
     },
     {
      "cell_type": "markdown",
@@ -1340,7 +1281,7 @@
        ]
       }
      ],
-     "prompt_number": 32
+     "prompt_number": 26
     },
     {
      "cell_type": "markdown",
@@ -1376,7 +1317,7 @@
        ]
       }
      ],
-     "prompt_number": 33
+     "prompt_number": 27
     },
     {
      "cell_type": "markdown",
@@ -1419,7 +1360,7 @@
        ]
       }
      ],
-     "prompt_number": 34
+     "prompt_number": 28
     },
     {
      "cell_type": "markdown",
@@ -1451,7 +1392,7 @@
        ]
       }
      ],
-     "prompt_number": 35
+     "prompt_number": 29
     },
     {
      "cell_type": "markdown",
@@ -1476,12 +1417,12 @@
        "output_type": "pyerr",
        "traceback": [
         "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[0;31mException\u001b[0m                                 Traceback (most recent call last)",
-        "\u001b[0;32m<ipython-input-36-2a27a03c35fc>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0my\u001b[0m \u001b[0;34m<=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m     \u001b[0;32mraise\u001b[0m \u001b[0mException\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"y must be > 0\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+        "\u001b[0;32m<ipython-input-30-2a27a03c35fc>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mif\u001b[0m \u001b[0my\u001b[0m \u001b[0;34m<=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m     \u001b[0;32mraise\u001b[0m \u001b[0mException\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"y must be > 0\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
         "\u001b[0;31mException\u001b[0m: y must be > 0"
        ]
       }
      ],
-     "prompt_number": 36
+     "prompt_number": 30
     },
     {
      "cell_type": "markdown",
@@ -1510,7 +1451,7 @@
        "output_type": "pyerr",
        "traceback": [
         "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[0;31mZeroDivisionError\u001b[0m                         Traceback (most recent call last)",
-        "\u001b[0;32m<ipython-input-37-790426358dbe>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0;32mprint\u001b[0m \u001b[0;34m\"Program quitting due to zero division\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0;31m# do some last moment clean-up\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m     \u001b[0;32mraise\u001b[0m \u001b[0merrorObj\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+        "\u001b[0;32m<ipython-input-31-790426358dbe>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0;32mprint\u001b[0m \u001b[0;34m\"Program quitting due to zero division\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m     \u001b[0;31m# do some last moment clean-up\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m     \u001b[0;32mraise\u001b[0m \u001b[0merrorObj\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
         "\u001b[0;31mZeroDivisionError\u001b[0m: integer division or modulo by zero"
        ]
       },
@@ -1522,7 +1463,7 @@
        ]
       }
      ],
-     "prompt_number": 37
+     "prompt_number": 31
     },
     {
      "cell_type": "markdown",
@@ -1549,7 +1490,7 @@
        "output_type": "pyerr",
        "traceback": [
         "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[0;31mZeroDivisionError\u001b[0m                         Traceback (most recent call last)",
-        "\u001b[0;32m<ipython-input-38-f045bb8bb349>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m     \u001b[0mw\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mx\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;32mfinally\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0;32mprint\u001b[0m \u001b[0;34m\"finished with division\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+        "\u001b[0;32m<ipython-input-32-f045bb8bb349>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 2\u001b[0;31m     \u001b[0mw\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mx\u001b[0m \u001b[0;34m/\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      3\u001b[0m \u001b[0;32mfinally\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0;32mprint\u001b[0m \u001b[0;34m\"finished with division\"\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
         "\u001b[0;31mZeroDivisionError\u001b[0m: integer division or modulo by zero"
        ]
       },
@@ -1561,7 +1502,7 @@
        ]
       }
      ],
-     "prompt_number": 38
+     "prompt_number": 32
     },
     {
      "cell_type": "markdown",
@@ -1607,7 +1548,7 @@
        ]
       }
      ],
-     "prompt_number": 39
+     "prompt_number": 33
     },
     {
      "cell_type": "markdown",
@@ -1634,7 +1575,7 @@
        ]
       }
      ],
-     "prompt_number": 40
+     "prompt_number": 34
     },
     {
      "cell_type": "markdown",
@@ -1661,7 +1602,7 @@
        ]
       }
      ],
-     "prompt_number": 41
+     "prompt_number": 35
     },
     {
      "cell_type": "markdown",
@@ -1679,7 +1620,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 42
+     "prompt_number": 36
     },
     {
      "cell_type": "markdown",
@@ -1698,7 +1639,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 43
+     "prompt_number": 37
     },
     {
      "cell_type": "markdown",
@@ -1719,7 +1660,7 @@
      "outputs": [
       {
        "output_type": "pyout",
-       "prompt_number": 55,
+       "prompt_number": 38,
        "text": [
         "['__doc__',\n",
         " '__file__',\n",
@@ -1770,7 +1711,7 @@
        ]
       }
      ],
-     "prompt_number": 55
+     "prompt_number": 38
     },
     {
      "cell_type": "markdown",
@@ -1790,7 +1731,7 @@
      "outputs": [
       {
        "output_type": "pyout",
-       "prompt_number": 54,
+       "prompt_number": 39,
        "text": [
         "['__add__',\n",
         " '__class__',\n",
@@ -1866,7 +1807,7 @@
        ]
       }
      ],
-     "prompt_number": 54
+     "prompt_number": 39
     },
     {
      "cell_type": "markdown",
@@ -1886,7 +1827,7 @@
      "outputs": [
       {
        "output_type": "pyout",
-       "prompt_number": 56,
+       "prompt_number": 40,
        "text": [
         "['__add__',\n",
         " '__class__',\n",
@@ -1962,7 +1903,7 @@
        ]
       }
      ],
-     "prompt_number": 56
+     "prompt_number": 40
     },
     {
      "cell_type": "markdown",
@@ -1995,7 +1936,7 @@
        ]
       }
      ],
-     "prompt_number": 57
+     "prompt_number": 41
     },
     {
      "cell_type": "markdown",
@@ -2029,7 +1970,7 @@
        ]
       }
      ],
-     "prompt_number": 58
+     "prompt_number": 42
     },
     {
      "cell_type": "code",
@@ -2049,7 +1990,7 @@
        ]
       }
      ],
-     "prompt_number": 59
+     "prompt_number": 43
     },
     {
      "cell_type": "markdown",
@@ -2073,12 +2014,12 @@
        "output_type": "pyerr",
        "traceback": [
         "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[0;31mValueError\u001b[0m                                Traceback (most recent call last)",
-        "\u001b[0;32m<ipython-input-60-02c83f934f9d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"not a number\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+        "\u001b[0;32m<ipython-input-44-02c83f934f9d>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"not a number\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
         "\u001b[0;31mValueError\u001b[0m: invalid literal for int() with base 10: 'not a number'"
        ]
       }
      ],
-     "prompt_number": 60
+     "prompt_number": 44
     },
     {
      "cell_type": "markdown",
