updating to master

--- a/Introduction_to_python_session_4.ipynb
+++ b/Introduction_to_python_session_4.ipynb
@@ -121,6 +121,101 @@
      ]
     },
     {
+     "cell_type": "markdown",
+     "metadata": {},
+     "source": [
+      "__The `argparse` library__\n",
+      "\n",
+      "\n",
+      "If you are developing a script and you want to read in standard unix command line options, i.e. those specified with a single or double hyphen such as `-h` or `--help`, there is a helpful library called `argparse` that you can use instead of directly operating on `sys.argv`. It also produces a helpful usage message. There are lots of options and settings, but here is a simple example."
+     ]
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "%%bash\n",
+      "cat scripts/argparse_example.py"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "# an example of using the argparse library to parse command line arguments\n",
+        "\n",
+        "import argparse\n",
+        "\n",
+        "def gc_content(seq):\n",
+        "    seq = seq.upper()\n",
+        "    return (seq.count('G') + seq.count('C')) / float(len(seq))\n",
+        "\n",
+        "parser = argparse.ArgumentParser(description='GC content calculator')\n",
+        "parser.add_argument('-s', '--seq', help='nucleotide sequence', required=True)\n",
+        "parser.add_argument('-l', '--len', action='store_true', help='compute the length of the sequence')\n",
+        "args = parser.parse_args()\n",
+        "\n",
+        "print \"GC:\", gc_content(args.seq)\n",
+        "\n",
+        "if args.len:\n",
+        "    print \"length:\", len(args.seq)\n",
+        "\n"
+       ]
+      }
+     ],
+     "prompt_number": 4
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "%%bash\n",
+      "python scripts/argparse_example.py -h"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "usage: argparse_example.py [-h] -s SEQ [-l]\n",
+        "\n",
+        "GC content calculator\n",
+        "\n",
+        "optional arguments:\n",
+        "  -h, --help         show this help message and exit\n",
+        "  -s SEQ, --seq SEQ  nucleotide sequence\n",
+        "  -l, --len          compute the length of the sequence\n"
+       ]
+      }
+     ],
+     "prompt_number": 5
+    },
+    {
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "%%bash\n",
+      "python scripts/argparse_example.py -s GCGCTGTGCCTGCAATGATCGT -l"
+     ],
+     "language": "python",
+     "metadata": {},
+     "outputs": [
+      {
+       "output_type": "stream",
+       "stream": "stdout",
+       "text": [
+        "GC: 0.590909090909\n",
+        "length: 22\n"
+       ]
+      }
+     ],
+     "prompt_number": 6
+    },
+    {
      "cell_type": "heading",
      "level": 2,
      "metadata": {},
@@ -164,7 +259,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 4
+     "prompt_number": 7
     },
     {
      "cell_type": "markdown",
@@ -185,13 +280,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 5,
+       "prompt_number": 8,
        "text": [
-        "<open file 'data/myfile.txt', mode 'r' at 0x105a6b420>"
+        "<open file 'data/myfile.txt', mode 'r' at 0x108491b70>"
        ]
       }
      ],
-     "prompt_number": 5
+     "prompt_number": 8
     },
     {
      "cell_type": "code",
@@ -205,13 +300,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 6,
+       "prompt_number": 9,
        "text": [
-        "<open file 'data/myfile.txt', mode 'w' at 0x105a6b4b0>"
+        "<open file 'data/myfile.txt', mode 'w' at 0x108491db0>"
        ]
       }
      ],
-     "prompt_number": 6
+     "prompt_number": 9
     },
     {
      "cell_type": "code",
@@ -225,13 +320,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 7,
+       "prompt_number": 10,
        "text": [
-        "<open file 'data/myfile.txt', mode 'a' at 0x105a6b540>"
+        "<open file 'data/myfile.txt', mode 'a' at 0x108491d20>"
        ]
       }
      ],
-     "prompt_number": 7
+     "prompt_number": 10
     },
     {
      "cell_type": "markdown",
@@ -272,7 +367,7 @@
        ]
       }
      ],
-     "prompt_number": 8
+     "prompt_number": 11
     },
     {
      "cell_type": "markdown",
@@ -304,7 +399,7 @@
        ]
       }
      ],
-     "prompt_number": 9
+     "prompt_number": 12
     },
     {
      "cell_type": "heading",
@@ -330,7 +425,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 10
+     "prompt_number": 13
     },
     {
      "cell_type": "heading",
@@ -370,7 +465,7 @@
        ]
       }
      ],
-     "prompt_number": 11
+     "prompt_number": 14
     },
     {
      "cell_type": "markdown",
@@ -413,7 +508,7 @@
        ]
       }
      ],
-     "prompt_number": 12
+     "prompt_number": 15
     },
     {
      "cell_type": "markdown",
@@ -446,7 +541,7 @@
        ]
       }
      ],
-     "prompt_number": 13
+     "prompt_number": 16
     },
     {
      "cell_type": "markdown",
@@ -480,7 +575,7 @@
        ]
       }
      ],
-     "prompt_number": 14
+     "prompt_number": 17
     },
     {
      "cell_type": "heading",
@@ -520,7 +615,7 @@
        ]
       }
      ],
-     "prompt_number": 15
+     "prompt_number": 18
     },
     {
      "cell_type": "heading",
@@ -547,7 +642,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 16
+     "prompt_number": 19
     },
     {
      "cell_type": "markdown",
@@ -577,7 +672,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 17
+     "prompt_number": 20
     },
     {
      "cell_type": "code",
@@ -600,7 +695,7 @@
        ]
       }
      ],
-     "prompt_number": 18
+     "prompt_number": 21
     },
     {
      "cell_type": "markdown",
@@ -731,7 +826,7 @@
        ]
       }
      ],
-     "prompt_number": 19
+     "prompt_number": 22
     },
     {
      "cell_type": "code",
@@ -758,7 +853,7 @@
        ]
       }
      ],
-     "prompt_number": 20
+     "prompt_number": 23
     },
     {
      "cell_type": "markdown",
@@ -795,7 +890,7 @@
        ]
       }
      ],
-     "prompt_number": 21
+     "prompt_number": 24
     },
     {
      "cell_type": "heading",
@@ -828,7 +923,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 22
+     "prompt_number": 25
     },
     {
      "cell_type": "code",
@@ -852,7 +947,7 @@
        ]
       }
      ],
-     "prompt_number": 23
+     "prompt_number": 26
     },
     {
      "cell_type": "markdown",
@@ -912,7 +1007,7 @@
        ]
       }
      ],
-     "prompt_number": 24
+     "prompt_number": 27
     },
     {
      "cell_type": "code",
@@ -932,7 +1027,7 @@
        ]
       }
      ],
-     "prompt_number": 25
+     "prompt_number": 28
     },
     {
      "cell_type": "heading",
@@ -983,7 +1078,7 @@
        ]
       }
      ],
-     "prompt_number": 26
+     "prompt_number": 29
     },
     {
      "cell_type": "markdown",
@@ -1023,7 +1118,7 @@
        ]
       }
      ],
-     "prompt_number": 27
+     "prompt_number": 30
     },
     {
      "cell_type": "code",
@@ -1053,13 +1148,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 28,
+       "prompt_number": 31,
        "text": [
         "(8.067400000000001, 21.1644, 20.034799999999997)"
        ]
       }
      ],
-     "prompt_number": 28
+     "prompt_number": 31
     },
     {
      "cell_type": "heading",
@@ -1105,7 +1200,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 29
+     "prompt_number": 32
     },
     {
      "cell_type": "code",
@@ -1129,7 +1224,7 @@
        ]
       }
      ],
-     "prompt_number": 30
+     "prompt_number": 33
     },
     {
      "cell_type": "heading",
@@ -1180,55 +1275,13 @@
       {
        "metadata": {},
        "output_type": "pyout",
-       "prompt_number": 31,
+       "prompt_number": 34,
        "text": [
         "'home/test/mydoc.txt'"
        ]
       }
      ],
-     "prompt_number": 31
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": []
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 31
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 31
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": []
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 31
-    },
-    {
-     "cell_type": "markdown",
-     "metadata": {},
-     "source": []
+     "prompt_number": 34
     },
     {
      "cell_type": "heading",
@@ -1266,7 +1319,7 @@
        ]
       }
      ],
-     "prompt_number": 32
+     "prompt_number": 35
     },
     {
      "cell_type": "markdown",
@@ -1330,7 +1383,7 @@
        ]
       }
      ],
-     "prompt_number": 33
+     "prompt_number": 36
     },
     {
      "cell_type": "code",
@@ -1357,7 +1410,7 @@
        ]
       }
      ],
-     "prompt_number": 34
+     "prompt_number": 37
     },
     {
      "cell_type": "code",
@@ -1396,7 +1449,7 @@
        ]
       }
      ],
-     "prompt_number": 35
+     "prompt_number": 38
     },
     {
      "cell_type": "code",
@@ -1428,7 +1481,7 @@
        "output_type": "stream",
        "stream": "stderr",
        "text": [
-        "/Library/Frameworks/EPD64.framework/Versions/7.3/lib/python2.7/site-packages/Bio/Entrez/__init__.py:429: UserWarning: \n",
+        "/Users/grsr/anaconda/lib/python2.7/site-packages/Bio/Entrez/__init__.py:447: UserWarning: \n",
         "Email address is not specified.\n",
         "\n",
         "To make use of NCBI's E-utilities, NCBI strongly recommends you to specify\n",
@@ -1444,7 +1497,7 @@
        ]
       }
      ],
-     "prompt_number": 36
+     "prompt_number": 39
     },
     {
      "cell_type": "code",
@@ -1467,12 +1520,12 @@
        "output_type": "stream",
        "stream": "stdout",
        "text": [
-        "RecName: Full=Hemoglobin subunit beta; AltName: Full=Beta-globin; AltName: Full=Hemoglobin beta chain; Contains: RecName: Full=LVV-hemorphin-7;\n",
+        "RecName: Full=Hemoglobin subunit beta; AltName: Full=Beta-globin; AltName: Full=Hemoglobin beta chain; Contains: RecName: Full=LVV-hemorphin-7; Contains: RecName: Full=Spinorphin;\n",
         "MVHLTPEEKSAVTALWGKVNVDEVGGEALGRLLVVYPWTQRFFESFGDLSTPDAVMGNPKVKAHGKKVLGAFSDGLAHLDNLKGTFATLSELHCDKLHVDPENFRLLGNVLVCVLAHHFGKEFTPPVQAAYQKVVAGVANALAHKYH\n"
        ]
       }
      ],
-     "prompt_number": 37
+     "prompt_number": 40
     },
     {
      "cell_type": "heading",
@@ -1513,7 +1566,7 @@
        ]
       }
      ],
-     "prompt_number": 38
+     "prompt_number": 41
     },
     {
      "cell_type": "code",
@@ -1538,7 +1591,7 @@
        ]
       }
      ],
-     "prompt_number": 39
+     "prompt_number": 42
     },
     {
      "cell_type": "code",
@@ -1560,7 +1613,7 @@
        ]
       }
      ],
-     "prompt_number": 40
+     "prompt_number": 43
     },
     {
      "cell_type": "heading",
@@ -1608,7 +1661,7 @@
        ]
       }
      ],
-     "prompt_number": 41
+     "prompt_number": 44
     },
     {
      "cell_type": "heading",
@@ -1645,7 +1698,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 42
+     "prompt_number": 45
     },
     {
      "cell_type": "heading",
@@ -1679,7 +1732,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 43
+     "prompt_number": 46
     },
     {
      "cell_type": "heading",
@@ -1710,7 +1763,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 44
+     "prompt_number": 47
     },
     {
      "cell_type": "heading",
@@ -1756,7 +1809,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 45
+     "prompt_number": 48
     },
     {
      "cell_type": "code",
@@ -1776,7 +1829,7 @@
        ]
       }
      ],
-     "prompt_number": 46
+     "prompt_number": 49
     },
     {
      "cell_type": "code",
@@ -1802,7 +1855,7 @@
        ]
       }
      ],
-     "prompt_number": 47
+     "prompt_number": 50
     }
    ],
    "metadata": {}
